backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: pritammehta/safe-credential:backend  # example: pritammehta/backend:latest
          ports:
            - containerPort: 3000
         # env:
           # - name: MONGO_URI
             # value: "mongodb://root:password123@mongo-service:27017/safeCredential"
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: NodePort
  selector:
    app: backend
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 32000
