frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: pritammehta/safe-credential:frontend   # example: pritammehta/frontend:latest
          ports:
            - containerPort: 80
#          env:
#           - name: VITE_BACKEND_API
#              value: "http://34.122.46.150:32000"   # your backend service URL
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - port: 80            # service port
      targetPort: 80      # container port
      nodePort: 30080     # node external port (you can change if needed)
