httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: safe-credential-route
spec:
  parentRefs:
  - name: safe-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api/v1
    # ADD THIS FILTER BELOW
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefix: /
    backendRefs:
    - name: safe-backend-service
      port: 5000

  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: safe-frontend-service
      port: 80
